--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crudUsuario",
+  "name": "crud-usuario",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/MartinsDanilo/crudUsuario.git",
