--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "sucrase": "^3.15.0",
     "yup": "^0.29.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
